--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,149 +1,50 @@
 <quick-view [quickviewed]="quickviewed"></quick-view>
 <!--Showcase-->
-<div class="container aguri-showcase mbt-120">
-    <div class="row">
-      <div class="col-6 showcase-main-img row">
-        <div id="carousel-main" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2000">
-              <div class="col-10 showcase-img">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-b1.png">
+<div class="ctg">
+  <div class="row ctg-inner">
+    <div class="ctg-left col-8">
+      <div class="ctg-left-top">
+        <div class="d-flex">
+          <div class="left-top">
+            <div class="ctg-img-inner">
+              <div class="image-ctg">
+                <a>
+                  <img src="./assets/img/shop-all/ctg1.webp">
                 </a>
-              </div>
-              <div class="decor-showcase-slide">
-                  <a class="round-button">
-                    <i class="fa-solid fa-arrow-right fa-2x"></i>
-                  </a>
+                <div class="name-ctg text-center">
+                  <h6 class="mb-2">Beaufille Collection</h6>
+                  <a class="text-light" routerLink="/category/1">Shop Rings Now</a>
+                </div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="col-10 showcase-img">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-b2.png">
-                </a>
-              </div>
-              <div class="decor-showcase-slide">
-                <a class="round-button">
-                  <i class="fa-solid fa-arrow-right fa-2x"></i>
-                </a>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="col-10 showcase-img">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-b3.png">
-                </a>
-              </div>
-              <div class="decor-showcase-slide">
-                <a class="round-button">
-                  <i class="fa-solid fa-arrow-right fa-2x"></i>
-                </a>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="col-10 showcase-img">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-b4.png">
-                </a>
-              </div>
-              <div class="decor-showcase-slide">
-                <a class="round-button">
-                  <i class="fa-solid fa-arrow-right fa-2x"></i>
-                </a>
-              </div>
+          </div>
+          <div class="center-top">
+            <div class="ctg-img-inner">
+              <a>
+                <img src="./assets/img/shop-all/ctg2.webp">
+              </a>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-8 ps-0 showcase-content">
-        <div class="showcase-title row">
-          <div class="col-8 showcase-title-inner">
-            <p class="decor-text mb-1">AGURI'S COLLECTION</p>
-            <h4 class="mb-2">Our Precious Jewelry Collections</h4>
-            <p class="smt">
-              Our goal is to offer you beautiful, classy and timeless jewellery that won't break the bank. We guarantee
-              the highest quality pieces you can rock everyday and for all occasions.
-            </p>
+      <div class="ctg-left-btm">
+        <div class="d-flex">
+          <div class="left-btm">
+            <div class="ctg-img-inner">
+              <a>
+                <img src="./assets/img/shop-all/ctg4.webp">
+              </a>
+            </div>
           </div>
-          <div class="col-2"></div>
-        </div>
-        <!--carousel-showcase-small-img-->
-        <div id="carousel-sub" class="carousel-dark carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2000">
-              <div class="row">
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s1.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s2.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s3.png">
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="row">
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s4.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s6.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s5.png">
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="row">
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s3.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s4.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s6.png">
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <div class="row">
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s5.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s3.png">
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a routerlink="#">
-                    <img src="./assets/img/home/showcase-s4.png">
-                  </a>
+          <div class="center-btm">
+            <div class="ctg-img-inner">
+              <div class="image-ctg">
+                <a>
+                  <img src="./assets/img/shop-all/ctg5.webp">
+                </a>
+                <div class="name-ctg text-center">
+                  <h6 class="mb-2">Beaufille Collection</h6>
+                  <a class="text-light" routerLink="/category/1">Shop Necklaces Now</a>
                 </div>
               </div>
             </div>
@@ -151,6 +52,29 @@
         </div>
       </div>
     </div>
+    <div class="ctg-right col-4">
+      <div class="right-top">
+        <div class="ctg-img-inner">
+          <div class="image-ctg">
+            <a>
+              <img src="./assets/img/shop-all/ctg3.webp">
+            </a>
+            <div class="name-ctg text-center">
+              <h6 class="mb-2">Beaufille Collection</h6>
+              <a class="text-light" routerLink="/category/1">Shop Earrings Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-btm">
+        <div class="ctg-img-inner">
+          <a>
+            <img src="./assets/img/shop-all/ctg6.webp">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!--New Arrivals-->
