--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,56 +7,115 @@
   background: #fff;
 }
 /*Showcase*/
-.aguri-showcase{
-  margin-bottom:90px;
+.ctg .ctg-inner .ctg-left{
+  padding-right:5px !important;
+  padding-left:0 !important;
 }
-.showcase-title-inner{
+.ctg-left-top .left-top{
+  padding-right:5px;
+}
+.ctg-left-top .center-top{
+  padding-left:5px;
+}
+.ctg-left-top{
+  padding-bottom:10px;
+}
+.ctg-left-btm .left-btm{
+  padding-right:5px;
+}
+.ctg-left-btm .center-btm{
+  padding-left:5px;
+}
+.ctg-img-inner{
+  overflow: hidden;
+}
+.ctg-img-inner img{
+  transition: transform 0.5s ease-out;
+}
+.ctg-img-inner:hover img{
+  transform: scale(1.03);
+  filter: brightness(80%);
+}
+.image-ctg{
   position: relative;
-  animation: mymove 2s;
-  animation-timing-function: linear;
 }
-@keyframes mymove {
-  from {left: -180px;}
-  to {left: 0px;}
+.image-ctg:hover .name-ctg{
+  opacity:1;
 }
-.showcase-content{
-  position: relative;
+.image-ctg:hover .name-ctg > a{
+  text-decoration: underline;
 }
-.showcase-main-img{
+.name-ctg{
   position: absolute;
-  right:0px;
-}
-.showcase-title{
-  padding-top:60px;
-  margin-bottom:40px;
-}
-.showcase-img{
-  position:relative;
-}
-.decor-showcase-slide{
-  position: absolute;
-  left:165px;
-  top:61%;
-}
-.round-button{
-  border: 2px solid #fff;
-  border-radius: 100%;
-  padding: 12px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-.round-button i{
-  padding:0px 3px;
+  top:43%;
+  left:30%;
   color:#fff;
+  opacity:0;
 }
-.round-button{
-  position: relative;
-  animation: mymove 2s infinite;
-  animation-timing-function: linear;
+.right-btm{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 295px;
+}
+.right-btm img{
+  max-height: 285px;
+}
+/*RIGHT*/
+.ctg .ctg-inner .ctg-right{
+  padding-right:0 !important;
+  padding-left:5px !important;
+}
+/*.aguri-showcase{*/
+/*  margin-bottom:90px;*/
+/*}*/
+/*.showcase-title-inner{*/
+/*  position: relative;*/
+/*  animation: mymove 2s;*/
+/*  animation-timing-function: linear;*/
+/*}*/
+/*@keyframes mymove {*/
+/*  from {left: -180px;}*/
+/*  to {left: 0px;}*/
+/*}*/
+/*.showcase-content{*/
+/*  position: relative;*/
+/*}*/
+/*.showcase-main-img{*/
+/*  position: absolute;*/
+/*  right:0px;*/
+/*}*/
+/*.showcase-title{*/
+/*  padding-top:60px;*/
+/*  margin-bottom:40px;*/
+/*}*/
+/*.showcase-img{*/
+/*  position:relative;*/
+/*}*/
+/*.decor-showcase-slide{*/
+/*  position: absolute;*/
+/*  left:165px;*/
+/*  top:61%;*/
+/*}*/
+/*.round-button{*/
+/*  border: 2px solid #fff;*/
+/*  border-radius: 100%;*/
+/*  padding: 12px;*/
+/*  text-align: center;*/
+/*  text-decoration: none;*/
+/*  display: inline-block;*/
+/*  font-size: 16px;*/
+/*}*/
+/*.round-button i{*/
+/*  padding:0px 3px;*/
+/*  color:#fff;*/
+/*}*/
+/*.round-button{*/
+/*  position: relative;*/
+/*  animation: mymove 2s infinite;*/
+/*  animation-timing-function: linear;*/
 
-}
+/*}*/
 /*All jewellery*/
 .item-box-content a{
   color:#fff;
