--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -5,3 +5,9 @@
   url('libs/font-awesome/webfonts/merchant/OpenType-TT/Merchant-Bold.ttf');
   font-family:'Merchant';
 }
+
+@font-face {
+  src:url('libs/font-awesome/webfonts/futura/FuturaPTBook.otf'),
+  url('libs/font-awesome/webfonts/futura/FuturaPTMedium.otf');
+  font-family: 'Futura';
+}
