shop all -home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -155,7 +155,7 @@
         <div class="item-box-all">
           <div class="item-box-img">
             <a routerLink="/category/4">
-              <img src="./assets/img/home/all-j1.png"/>
+              <img src="./assets/img/home/all-j1.webp"/>
             </a>
           </div>
           <div class="item-box-content text-center">
@@ -169,7 +169,7 @@
         <div class="item-box-all">
           <div class="item-box-img">
             <a routerLink="/category/3">
-              <img src="./assets/img/home/all-j2.png"/>
+              <img src="./assets/img/home/all-j2.webp"/>
             </a>
           </div>
           <div class="item-box-content text-center">
@@ -190,7 +190,7 @@
         <div class="item-box-all">
           <div class="item-box-img">
             <a routerLink="/category/1">
-              <img src="./assets/img/home/all-j3.png"/>
+              <img src="./assets/img/home/all-j3.webp"/>
             </a>
           </div>
           <div class="item-box-content text-center">
@@ -204,7 +204,7 @@
         <div class="item-box-all">
           <div class="item-box-img">
             <a routerLink="/category/2">
-              <img src="./assets/img/home/all-j4.png"/>
+              <img src="./assets/img/home/all-j4.webp"/>
             </a>
           </div>
           <div class="item-box-content text-center">
