--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 body{
   font-size: 16px;
   font-weight: 400;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Futura PT', sans-serif;
   background-color: #FAF8F6;
 }
 
